--- a/index.html
+++ b/index.html
@@ -25,10 +25,38 @@
                     <button>Começando</button>
                 </ul>
                 <div class="menu-icon">
-                    <img src="imagens/menu.png" alt="">
+                    <img src="imagens/menu.png" alt="menu-icon">
                 </div>
             </nav>
         <!-- end nav -->
+        <main>
+            <div class="text-bx">
+                <h1>Cresça o seu negócio <b>marketing de mídia social</b></h1>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and 
+                    typesetting industry. Lorem Ipsum has been the 
+                    industry's standard dummy text ever since the 1500s
+                </p>
+                <div class="input-bx">
+                    <input type="email" placeholder="Endereço de email">
+                    <button>Ver Mais</button>
+                </div>
+
+                <div class="medias-sociais">
+                    <a href="#"> <i class="fa fa-instagram"></i></a>
+                    <a href="#"> <i class="fa fa-facebook"></i></a>
+                    <a href="#"> <i class="fa fa-twitter"></i></a>
+                    <a href="#"> <i class="fa fa-youtube-play"></i></a>
+                    <a href="#"> <i class="fa fa-whatsapp"></i></a>
+                </div>
+            </div>
+
+            <div class="img-bx">
+                <img src="imagens/jornada-marketing.png" alt="">
+            </div>
+        </main>
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
