--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- end nav -->
         <main>
             <div class="text-bx">
-                <h1>Cresça o seu negócio <b>marketing de mídia social</b></h1>
+                <h1>Cresça o seu negócio com <b>marketing de mídia social</b></h1>
                 <p>
                     Lorem Ipsum is simply dummy text of the printing and 
                     typesetting industry. Lorem Ipsum has been the 
